add app info
